# xiaoai-control-pc

./: .env.example  .gitignore  README.md  package-lock.json  package.json
.github/workflows/: release-tauri.yml
app/desktop/: index.html  main.js  styles.css
app/desktop/help/: index.html
app/scripts/: generate-help-page.js  package-portable.js  sync-version.js
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: lib.rs  main.rs
scripts/: build-service.js  install-service.js  service-installation.js  service-status.js  uninstall-service.js
service/scripts/: prepare-tauri-resources.js  service-installation.js
service/src/: service.js
service/src/config/: app-constants.js
service/src/core/: mqtt-client.js
src/: index.js  service.js
src/actions/: system.js
src/config/: action-map.js  app-constants.js  env.js  service-name.js
src/core/: action-dispatcher.js
