[package]
name = "xiaoai-control-pc-ui"
version = "0.1.0"
description = "Tauri desktop manager for XiaoAi Control PC"
authors = ["fyk"]
edition = "2021"

[lib]
name = "xiaoai_control_pc_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_Graphics_Dwm"] }
